RESOLVED FIXED47733
[GTK] Soup cache code still has some warnings
https://bugs.webkit.org/show_bug.cgi?id=47733
Summary [GTK] Soup cache code still has some warnings
Martin Robinson
Reported 2010-10-15 12:54:19 PDT
I see this when building the Soup cache code: ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c: In function ‘webkit_soup_cache_entry_set_freshness’: ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c:300: warning: cast from pointer to integer of different size ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c: In function ‘close_ready_cb’: ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c:512: warning: comparison between signed and unsigned integer expressions
Attachments
proposed patch (2.27 KB, patch)
2010-10-19 02:48 PDT, Philippe Normand
xan.lopez: review-
updated patch (2.21 KB, patch)
2010-10-19 05:05 PDT, Philippe Normand
xan.lopez: review+
Philippe Normand
Comment 1 2010-10-19 02:48:10 PDT
Created attachment 71148 [details] proposed patch
Xan Lopez
Comment 2 2010-10-19 03:28:31 PDT
Comment on attachment 71148 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=71148&action=review > WebCore/platform/network/soup/cache/webkit/soup-cache.c:302 > The original code would NOT revalidate if the 'must-revalidate' is not present. Your patch changes that so that it WILL revalidate if the key is not there. I don't think that's right?
Philippe Normand
Comment 3 2010-10-19 05:05:07 PDT
Created attachment 71155 [details] updated patch
Xan Lopez
Comment 4 2010-10-19 07:30:17 PDT
Comment on attachment 71155 [details] updated patch Awesome.
Philippe Normand
Comment 5 2010-10-19 07:39:28 PDT
Note You need to log in before you can comment on or make changes to this bug.