2010-10-19  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Soup cache code still has some warnings
        https://bugs.webkit.org/show_bug.cgi?id=47733

        Fixed some compilation warnings happening with gcc 4.4.5 on
        64-bits architecture.

        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_entry_set_freshness):
        (close_ready_cb):

Canonical link: https://commits.webkit.org/60618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70056 268f45cc-cd09-0410-ab3c-d52691b4dbfc